Added some effects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a Computer Engineering student with a keen interest in software development, AI, and IoT. I enjoy solving challenging problems and building efficient solutions.</p>
+    <p>I am a Computer Engineering student with a keen interest in software development. I enjoy solving challenging problems and building efficient solutions.</p>
   </section>
 
   <section id="skills">
